--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "proxy":"http://localhost:5500",
+  "proxy": "http://localhost:5500",
   "scripts": {
     "start": "nodemon ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,6 +25,7 @@
     "express-fileupload": "^1.3.1",
     "express-session": "^1.17.2",
     "font-awesome": "^4.7.0",
+    "googleapis": "^101.0.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
